# zpackr

./: FLOWCHART.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml
tests/: conftest.py  test_checkpoint.py  test_dual_signal.py  test_integration.py  test_mode_packr_unchanged.py  test_prompt_gate.py  test_salience.py  test_vram_regression.py  test_zpackr_layer.py  test_zstd_dict.py
tools/: ablate.py  build_super_dict.py
zpackr/: __init__.py  checkpoint.py  config.py  layer_patcher.py  prompt_gate.py  salience.py  super_dict.py  super_dict.zdict  zpackr_interface.py  zpackr_layer.py  zstd_dict.py
