[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zpackr"
version = "0.1.0"
description = "ZPackR — LZ4-compressed delta training with per-block attenuation"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "otherdrums"}]
keywords = ["pytorch", "memory-efficient", "neural-network", "compression", "lz4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "packr>=0.1.0",
    "zstandard>=0.22",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "transformers",
    "datasets",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["zpackr*"]
